# Tg-Index-Heroku

./: .gitignore  .replit  Dockerfile  README.md  pyproject.toml  requirements.txt  run-repl.py
.github/workflows/: deploy.yml
app/: config.py  genss.py  main.py  routes.py  telegram.py  util.py
app/templates/: footer.html  header.html  home.html  info.html
app/templates/js/: playlist.js
app/views/: __init__.py  base.py  download.py  faviconicon_view.py  home_view.py  index_view.py  info_view.py  login_view.py  logo_view.py  logout_view.py  middlewhere.py  thumbnail_view.py  wildcard_view.py
